src/test/ui/suggestions/integer-into.stderr
error[E0308]: mismatched types
  --> $DIR/integer-into.rs:3:18
   |
LL |     let _: i64 = a;
   |            ---   ^
   |            |     |
   |            |     expected `i64`, found `u8`
   |            |     help: you can convert an `u8` to `i64`: `a.into()`
   |            expected due to this

error[E0308]: mismatched types
  --> $DIR/integer-into.rs:7:20
   |
LL |     let _: isize = b;
   |            -----   ^
   |            |       |
   |            |       expected `isize`, found `i8`
   |            |       help: you can convert an `i8` to `isize`: `b.into()`
   |            expected due to this

error[E0308]: mismatched types
  --> $DIR/integer-into.rs:11:20
   |
LL |     let _: isize = c;
   |            -----   ^
   |            |       |
   |            |       expected `isize`, found `u8`
   |            |       help: you can convert an `u8` to `isize`: `c.into()`
   |            expected due to this

error[E0308]: mismatched types
  --> $DIR/integer-into.rs:15:20
   |
LL |     let _: usize = d;
   |            -----   ^
   |            |       |
   |            |       expected `usize`, found `u8`
   |            |       help: you can convert an `u8` to `usize`: `d.into()`
   |            expected due to this

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0308`.
